--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,10 @@ dependencies {
 
     implementation 'com.kroegerama:android-kaiteki:2.8.1'
 
+    implementation 'androidx.camera:camera-core:1.0.0-alpha03'
+    implementation 'androidx.camera:camera-camera2:1.0.0-alpha03'
+
+    implementation 'com.google.zxing:core:3.4.0'
+
     implementation project(':library')
 }
